# est13.com

./: .dockerignore  .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  docker-compose.dokploy.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0001_create_users.py  0002_leads_and_content.py  0003_question_positions.py  0004_archive_flags.py  0005_user_chat.py  0006_lead_stage.py  0007_admin_auth.py  0008_admin_emoji.py  0009_lead_status_more.py  0010_q_media_layout.py  0011_service_start.py  0012_end_flags.py  0013_bot_text_photos.py  0014_chat_message_seen_at.py  0015_chat_message_admin_seen_at.py  0016_support_timeout_and_admin_tracking.py  0017_lead_acceptance.py  0018_lead_statuses_and_events.py  0019_client_not_confirmed_status.py  0020_projects.py  0021_lead_source.py  0022_admin_super.py
api/: Dockerfile  app.py  deps.py  docker-entrypoint.sh  main.py
api/routers/: admins.py  broadcast.py  dashboard.py  health.py  leads.py  notifications.py  projects.py  services.py  settings.py  texts.py  users.py  webapp.py
api/schemas/: admins.py  broadcast.py  common.py  dashboard.py  leads.py  notifications.py  projects.py  services.py  texts.py  users.py
api/services/: auth.py  bot.py  lead_workflow.py  media.py  support.py
bot/: Dockerfile  bot_factory.py  logging_setup.py  main.py  startup.py  states.py
est13_core/: config.py
mini_app/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
nardo_admin/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
(+82 files in other folders)
